--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 $black: #333333;
 $white: #ffffff;
 $accent: #B59571;
+$dark: #5B5B5B;
 $fonts: 'Circe', sans-serif;
 
 body {
@@ -8,6 +9,10 @@ body {
 }
 section:not(.bannSection) {
     padding: 75px 0;
+}
+a {
+    text-decoration: none;
+    color: $black;
 }
 header {
     position: fixed;
@@ -117,6 +122,7 @@ header {
                 padding: 10px 20px;
                 background-color: $accent;
                 font-weight: bold;
+                font-size: 16px;
             }
         }
     }
@@ -151,13 +157,16 @@ header {
     transform: translateY(-50%);
 }
 .aboutSection,
-.menuSection {
+.menuSection,
+.deliverySection {
     .aboutBlock,
-    .menuBlock {
+    .menuBlock,
+    .deliveryBlock {
         .info-block {
             display: grid;
             grid-template-columns: 300px 1fr;
             padding-left: 220px;
+            gap: 20px;
             .item {
                 .title__name {
                     width: 80%;
@@ -168,6 +177,44 @@ header {
                 p:last-of-type {
                     margin-bottom: 0;
                 }
+                .btn-block {
+                    margin-top: 60px;
+                }
+            }
+        }
+        .menu-list {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            padding-left: 220px;
+            gap: 24px;
+            margin-top: 80px;
+            .item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .img {
+                    padding: 40px 40px 0 40px;
+                    margin-bottom: 24px;
+                    width: 100%;
+                    height: 240px;
+                    position: relative;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+                .img::before {
+                    content: '';
+                    position: absolute;
+                    top: 0px;
+                    left: 0px;
+                    width: 100%;
+                    height: calc(100% - 40px);
+                    border: 1px solid $black;
+                    opacity: .2;
+                    z-index: -1;
+                }
             }
         }
     }
@@ -176,4 +223,181 @@ header {
     font-size: 64px;
     font-weight: bold;
     line-height: 1.2;
+}
+.deliverySection .deliveryBlock .info-block .item .title__name {
+    width: 100%;
+}
+.btn-block {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 15px;
+}
+.btn {
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 20px;
+    font-weight: bold;
+    transition: all .3s;
+}
+.btn-accent {
+    background-color: $accent;
+    color: $white;
+}
+.btn-accent:hover {
+    background-color: #9f866b!important;
+}
+.btn-borderGray {
+    background-color: $white;
+    outline: 1px solid rgba(51, 51, 51, 0.2);
+    outline-offset: -1px;
+}
+.btn-borderGray:hover {
+    background-color: $black;
+    outline: 0px;
+    color: $white;
+}
+.btn-borderWhite {
+    background-color: transparent;
+    outline: 1px solid $white;
+    outline-offset: -1px;
+    color: $white;
+}
+.btn-borderWhite:hover {
+    background-color: $white;
+    outline: 0;
+    color: $black!important;
+}
+.contactSection {
+    .contactBlock {
+        .info-block {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            align-items: center;
+            gap: 20px;
+            .item {
+                width: 100%;
+                position: relative;
+                .blockMain {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    column-gap: 24px;
+                    row-gap: 50px;
+                    .item_b {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 5px;
+                        .time {
+                            color: $accent;
+                            font-size: 32px;
+                            font-weight: 700;
+                            span {
+                                font-size: 64px;
+                                margin-right: 15px;
+                            }
+                        }
+                        .city {
+                            font-size: 18px;
+                        }
+                    }
+                }
+                .img {
+                    width: 100%;
+                    height: 450px;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+                .info {
+                    position: absolute;
+                    top: 50%;
+                    left: -110px;
+                    padding: 40px;
+                    background-color: $dark;
+                    color: $white;
+                    transform: translateY(-50%);
+                    a {
+                        color: $white;
+                    }
+                    .address {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 20px;
+                        .addr,
+                        .phone {
+                            display: flex;
+                            gap: 15px;
+                            i {
+                                color: $accent;
+                            }
+                        }
+                    }
+                    .time-work {
+                        margin-top: 25px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 15px;
+                        .title {
+                            font-size: 20px;
+                            font-weight: bold;
+                        }
+                        .block_time {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 15px;
+                            .item_t {
+                                display: flex;
+                                column-gap: 14px;
+                                row-gap: 5px;
+                                span {
+                                    font-size: 18px;
+                                }
+                                span:first-of-type {
+                                    font-weight: bold;
+                                }
+                            }
+                        }
+                    }
+                    .btn-block {
+                        margin-top: 30px;
+                    }
+                }
+            }
+            .item:first-of-type {
+                padding-right: 110px;
+            }
+        }
+    }
+}
+footer {
+    background-color: $black;
+    color: $white;
+    a {
+        color: $white;
+    }
+    .footer {
+        padding: 35px 0;
+        .info-block {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            align-items: center;
+            .logo {
+                width: 80px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+            span:nth-of-type(1) {
+                text-align: center;
+            }
+            span:nth-of-type(2) {
+                text-align: right;
+            }
+        }
+    }
 }
