--- a/style/style.css
+++ b/style/style.css
@@ -320,6 +320,7 @@ header ul {
   font-size: 20px;
   font-weight: bold;
   transition: all 0.3s;
+  cursor: pointer;
 }
 
 .btn-accent {
@@ -490,4 +491,173 @@ footer .footer .info-block span:nth-of-type(1) {
 }
 footer .footer .info-block span:nth-of-type(2) {
   text-align: right;
+}
+
+.navLkSection {
+  padding-top: 30px !important;
+  padding-bottom: 0 !important;
+}
+.navLkSection .navLkBlock nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  row-gap: 10px;
+}
+
+.menuListSection .menuListBlock .category {
+  padding-bottom: 60px;
+}
+.menuListSection .menuListBlock .category ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+.menuListSection .menuListBlock .product {
+  margin: 0 200px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 130px;
+}
+.menuListSection .menuListBlock .product .gallery .img {
+  width: 100%;
+  height: 317px;
+}
+.menuListSection .menuListBlock .product .gallery .img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.menuListSection .menuListBlock .product .gallery .swiper {
+  margin-top: 24px;
+}
+.menuListSection .menuListBlock .product .gallery .swiper .swiper-wrapper .img {
+  height: 93px;
+}
+.menuListSection .menuListBlock .product .information {
+  display: flex;
+  flex-direction: column;
+}
+.menuListSection .menuListBlock .product .information > .name {
+  font-size: 35px;
+  font-weight: bold;
+  line-height: 110%;
+  padding-bottom: 35px;
+  border-bottom: 1px solid #333333;
+  margin-bottom: 35px;
+}
+.menuListSection .menuListBlock .product .information .cost {
+  margin-bottom: 30px;
+}
+.menuListSection .menuListBlock .product .information .cost span:not(:first-of-type) {
+  opacity: 0.6;
+}
+.menuListSection .menuListBlock .product .information .cost span:first-of-type {
+  font-size: 32px;
+  font-weight: bold;
+}
+.menuListSection .menuListBlock .product .information .quantity {
+  display: flex;
+  flex-direction: column;
+}
+.menuListSection .menuListBlock .product .information .quantity > span {
+  display: inline-block;
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+.menuListSection .menuListBlock .product .information .quantity .inCart {
+  display: flex;
+  flex-wrap: wrap;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  row-gap: 10px;
+  padding-bottom: 45px;
+  border-bottom: 1px solid #333333;
+  margin-bottom: 35px;
+}
+.menuListSection .menuListBlock .product .information .quantity .inCart input {
+  border: 1px solid rgba(51, 51, 51, 0.2);
+  outline: none;
+  padding: 15px 25px;
+  width: 85px;
+}
+.menuListSection .menuListBlock .product .information .additionally {
+  display: flex;
+  flex-direction: column;
+}
+.menuListSection .menuListBlock .product .information .additionally > span {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+.menuListSection .menuListBlock .product .information .additionally .functions {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.menuListSection .menuListBlock .product .information .additionally .functions .item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+}
+.menuListSection .menuListBlock .product .information .additionally .functions .item .info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.menuListSection .menuListBlock .product .information .additionally .functions .item .info .name {
+  font-weight: bold;
+  opacity: 0.5;
+}
+.menuListSection .menuListBlock .product .information .additionally .functions .item .info .price {
+  font-weight: bold;
+  font-size: 20px;
+}
+.menuListSection .menuListBlock .info-block.listProduct {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, auto));
+  gap: 25px;
+}
+
+.swiper .swiper-wrapper {
+  max-width: 0;
+}
+.swiper .swiper-button-next, .swiper .swiper-button-prev {
+  color: #333333;
+}
+
+.modal#newOrderModal .modal-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  color: #ffffff;
+}
+.modal#newOrderModal .modal-body .logo {
+  width: 80px;
+  height: 100%;
+}
+.modal#newOrderModal .modal-body .logo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.modal#newOrderModal .modal-body span {
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+button {
+  border: 0;
+  outline: 0;
 }/*# sourceMappingURL=style.css.map */
