--- a/style/style.scss
+++ b/style/style.scss
@@ -239,6 +239,7 @@ header {
     font-size: 20px;
     font-weight: bold;
     transition: all .3s;
+    cursor: pointer;
 }
 .btn-accent {
     background-color: $accent;
@@ -400,4 +401,179 @@ footer {
             }
         }
     }
+}
+.navLkSection {
+    padding-top: 30px!important;
+    padding-bottom: 0!important;
+    .navLkBlock {
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            align-items: center;
+            column-gap: 30px;
+            row-gap: 10px;
+        }
+    }
+}
+.menuListSection {
+    .menuListBlock {
+        .category {
+            padding-bottom: 60px;
+            ul {
+                margin: 0;
+                padding: 0;
+                list-style: none;
+                display: flex;
+                justify-content: space-evenly;
+            }
+        }
+        .product {
+            margin: 0 200px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 130px;
+            .gallery {
+                .img {
+                    width: 100%;
+                    height: 317px;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+                .swiper {
+                    margin-top: 24px;
+                    .swiper-wrapper {
+                        .img {
+                            height: 93px;
+                        }
+                    }
+                }
+            }
+            .information {
+                display: flex;
+                flex-direction: column;
+                > .name {
+                    font-size: 35px;
+                    font-weight: bold;
+                    line-height: 110%;
+                    padding-bottom: 35px;
+                    border-bottom: 1px solid $black;
+                    margin-bottom: 35px;
+                }
+                .cost {
+                    margin-bottom: 30px;
+                    span:not(:first-of-type) {
+                        opacity: .6;
+                    }
+                    span:first-of-type {
+                        font-size: 32px;
+                        font-weight: bold;
+                    }
+                }
+                .quantity {
+                    display: flex;
+                    flex-direction: column;
+                    > span {
+                        display: inline-block;
+                        font-weight: bold;
+                        margin-bottom: 25px;
+                    }
+                    .inCart {
+                        display: flex;
+                        flex-wrap: wrap;
+                        column-gap: 20px;
+                        row-gap: 10px;
+                        padding-bottom: 45px;
+                        border-bottom: 1px solid $black;
+                        margin-bottom: 35px;
+                        input {
+                            border: 1px solid rgba(51, 51, 51, 0.2);
+                            outline: none;
+                            padding: 15px 25px;
+                            width: 85px;
+                        }
+                    }
+                }
+                .additionally {
+                    display: flex;
+                    flex-direction: column;
+                    > span {
+                        font-size: 32px;
+                        font-weight: bold;
+                        margin-bottom: 30px;
+                        display: inline-block;
+                    }
+                    .functions {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 20px;
+                        .item {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            gap: 30px;
+                            .info {
+                                display: flex;
+                                flex-direction: column;
+                                gap: 10px;
+                                .name {
+                                    font-weight: bold;
+                                    opacity: .5;
+                                }
+                                .price {
+                                    font-weight: bold;
+                                    font-size: 20px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .info-block.listProduct {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, auto));
+            gap: 25px;
+        }
+    }
+}
+.swiper {
+    .swiper-wrapper {
+        max-width: 0;
+    }
+    .swiper-button-next, .swiper-button-prev {
+        color: $black;
+    }
+}
+.modal#newOrderModal {
+    .modal-body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+        color: $white;
+        .logo {
+            width: 80px;
+            height: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+        span {
+            font-size: 20px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+    }
+}
+button {
+    border: 0;
+    outline: 0;
 }
