--- a/style/style.scss
+++ b/style/style.scss
@@ -16,6 +16,7 @@ a {
 }
 header {
     position: fixed;
+    top: 0;
     height: 100vh;
     background-color: $black;
     z-index: 50;
@@ -46,6 +47,7 @@ header {
                 flex-direction: column;
                 gap: 7px;
                 width: 35px;
+                cursor: pointer;
                 div {
                     background-color: $accent;
                     height: 4px;
@@ -82,19 +84,21 @@ header {
 }
 .bannSection {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('../img/bg.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
     .bannBlock {
         position: relative;
-        height: 100%;
+        height: auto;
         margin: 0 120px;
         padding: 30px 0 150px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        gap: 50px;
         .text {
             padding-left: 300px;
             font-size: 54px;
@@ -214,6 +218,9 @@ header {
                     border: 1px solid $black;
                     opacity: .2;
                     z-index: -1;
+                }
+                .title__block {
+                    margin-bottom: 0;
                 }
             }
         }
@@ -383,7 +390,8 @@ footer {
         .info-block {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
+            column-gap: 20px;
+            row-gap: 10px;
             align-items: center;
             .logo {
                 width: 80px;
@@ -557,6 +565,7 @@ footer {
         align-items: center;
         gap: 40px;
         color: $white;
+        padding: 60px;
         .logo {
             width: 80px;
             height: 100%;
@@ -571,9 +580,144 @@ footer {
             font-weight: bold;
             text-transform: uppercase;
         }
+        .btn-close {
+            position: absolute;
+            top: 30px;
+            right: 30px;
+            font-size: 30px;
+            color: $accent;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 1;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            width: 100%;
+            input {
+                padding: 15px 20px;
+                background-color: $black;
+                outline: 0;
+                border: 1px solid $white;
+                color: $white;
+            }
+            .desc {
+                display: flex;
+                row-gap: 24px;
+                column-gap: 30px;
+                input {
+                    width: calc(50% - 12px);
+                }
+            }
+            button {
+                margin: 10px auto 0;
+                width: fit-content;
+            }
+        }
     }
 }
 button {
     border: 0;
     outline: 0;
+}
+.menu-open {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: $black;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    z-index: 100;
+    overflow: hidden;
+    transition: all .3s;
+    .info-block {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 30px 100px 90px;
+        min-width: 100vw;
+        overflow-y: auto;
+        gap: 20px;
+        .item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                li {
+                    color: $white;
+                    a {
+                        color: $white;
+                    }
+                }
+            }
+        }
+        .item.logo-close {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            .logo {
+                width: 80px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+            .btn-close {
+                width: 40px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: $accent;
+                opacity: 1;
+                cursor: pointer;
+                i {
+                    font-size: 30px;
+                }
+            }
+        }
+        .item.list {
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 60px;
+                li {
+                    font-size: 48px;
+                    font-weight: bold;
+                    text-align: center;
+                }
+            }
+        }
+        .item.social {
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                column-gap: 20px;
+                row-gap: 10px;
+                li {
+                    a {
+                        img {
+                            width: 40px;
+                            height: 40px;
+                            object-fit: contain;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+.menu-open:not(.active) {
+    width: 0;
 }
