--- a/style/style.scss
+++ b/style/style.scss
@@ -433,7 +433,24 @@ footer {
                 padding: 0;
                 list-style: none;
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-evenly;
+                gap: 10px;
+                li {
+                    a {
+                        position: relative;
+                    }
+                    a.active::before,
+                    a:hover::before {
+                        content: '';
+                        position: absolute;
+                        bottom:- 5px;
+                        left: 0;
+                        width: 100%;
+                        height: 3px;
+                        background-color: $accent;
+                    }
+                }
             }
         }
         .product {
@@ -541,11 +558,44 @@ footer {
                 }
             }
         }
-
         .info-block.listProduct {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, auto));
+            grid-template-columns: repeat(auto-fill, minmax(270px, auto));
             gap: 25px;
+            .item {
+                border: 1px solid rgba(51, 51, 51, 0.2);
+                .img {
+                    width: 100%;
+                    height: 220px;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+                .name-price {
+                    display: flex;
+                    flex-direction: column;
+                    padding: 30px;
+                    gap: 25px;
+                    .name {
+                        font-size: 20px;
+                        font-weight: bold;
+                    }
+                    .price-cart {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        .price {
+                            font-size: 32px;
+                            font-weight: bold;
+                        }
+                        .btn {
+                            padding: 10px 20px;
+                        }
+                    }
+                }
+            }
         }
     }
 }
